src/BestForYouRecipes/wwwroot/css/site.css
body {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    margin: 0;
}

body > * {
    padding: 20px 10%;
}

h1, h2, h3, h4, h5 {
    font-family: 'Playfair Display', serif;
    font-weight: normal;
}

h1 {
    color: #435896;
    text-align: center;
}

p, input {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

input[type="checkbox"] {
    vertical-align: middle;
}

header {
    height: 130px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#logo {
    height: inherit;
}

.search {
    display: flex;
    align-items: center;
    max-width: 30em;
    margin: 0 auto;
    background: #F5F5F5;
    opacity: 0.78;
    color: #666666;
    border: 1px solid #999999;
    border-radius: 2px;
    padding: 6px 12px;
}

    .search input {
        flex: 1;
        font-family: Open Sans;
        font-size: 14px;
        line-height: 20px;
        border: none;
        background: inherit;
    }

    .search input:focus {
        outline: none;
    }

.recipe-list {
    list-style: none;
    padding: 0;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(18em, 1fr));
    grid-gap: 20px;
}

.recipe-list-item {
    border-radius: 8px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
}

    .recipe-list-item a {
        text-decoration: none;
        color: inherit;
    }

    .recipe-list-item:hover {
        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
    }

.recipe-card {
    box-sizing: border-box;
    height: 100%;
    display: flex;
    flex-direction: column;
    padding-bottom: 12px;
}

    .recipe-card img {
        width: 100%;
    }

.recipe-card-body {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 0px 8px 0px 8px;
}

.recipe-card-name {
    margin: 1rem 0 1rem 0;
}

.recipe-card-source {
    margin-top: 0;
}

.recipe-card .star-rating {
    margin-top: auto;
    justify-content: flex-end;
}

.star-rating {
    --percent: calc(var(--star-rating) / 5 * 100%);
    font-size: 1.5em;
    display: inline-block;
}

    .star-rating .stars {
        position: relative;
    }

    .star-rating .stars::before {
        position: absolute;
        content: "☆☆☆☆☆";
        color: #666666;
    }

    .star-rating .stars::after {
        position: absolute;
        top: 0;
        left: 0;
        content: "★★★★★";
        color: #feac25;
        width: var(--percent);
        overflow: hidden;
    }

    .star-rating .rating {
        font-size: 1ex;
        color: #605E5C
    }

    .star-rating input {
        display: none;
    }

    .star-rating label {
        float: right;
    }

    .star-rating label:before {
        content: "☆";
        color: #666666;
        cursor: pointer;
    }

    .star-rating input:checked ~ label:before,
    .star-rating:not(:checked) > label:hover:before,
    .star-rating:not(:checked) > label:hover ~ label:before {
        content: "★";
        color: #feac25;
    }

.back-link {
    font-family: 'Playfair Display', serif;
    text-transform: uppercase;
    color: #435869;
    text-decoration: none;
}

.source-and-servings {
    text-align: center;
    text-transform: uppercase;
    color: #212A31;
    text-align: center;
    margin: 5px 0;
}

.recipe .star-rating-avg {
    text-align: center;
    margin: 5px 0;
}

.recipe-banner {
    width: 125%;
    margin: 0 -12.5%;
}

    .recipe-banner img {
        display: block;
        width: 100%;
        margin-left: auto;
        margin-right: auto;
        max-width: 1800px;
    }

.recipe-details {
    padding: 0 5%;
}

    .recipe-details ul {
        list-style: none;
        padding: 0;
    }

.tag {
    font-size: 0.8em;
    background-color: #eaeaea;
    text-transform: uppercase;
    padding: 0 4px;
}

.reviews textarea {
    display: block;
    padding: 6px 8px;
    margin-bottom: 5px;
    width: 100%;
    border: 1px solid #605E5C;
    border-radius: 2px;
    font-family: Open Sans;
    font-size: 0.8em;
    color: #605E5C;
    box-sizing: border-box;
}

button {
    padding: 6px 25px;
    font-family: Playfair Display;
    color: white;
    background-color: #435869;
    border-radius: 2px;
    border: 0;
}

button:hover {
    background-color: #334452;
}

button:active {
    background-color: #26343f;
}

.review-editor {
    margin-bottom: 10px;
}

.reviews .rating
{
    display: none;
}

footer {
    height: 72px;
    background: #435869;
    font-family: 'Playfair Display', serif;
    color: white;
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

    #blazor-error-ui .dismiss {
        cursor: pointer;
        position: absolute;
        right: 0.75rem;
        top: 0.5rem;
    }

